syntax = "proto3";

option csharp_namespace = "RecordsServiceTest";


service RecordsManagementService {
	rpc AllRecords (allRecordsRequest) returns (stream recordModel);
	rpc GetRecordById (IdOfRecord) returns (recordModel);
	rpc AddRecord (NewRecord) returns (responseModel);
	rpc UpdateRecord (UpdateRecordModel) returns (responseModel);
	rpc DeleteRecord (DeleteRecordModel) returns (responseModel);
}

message responseModel {
	int32 error = 1;
	string message =2;
}

message allRecordsRequest {

}

message recordModel {
	int32 recordId = 1;
	string performer = 2;
	string title = 3;
	double price = 4;
	int32 stockCount = 5;
}

message IdOfRecord {
	int32 recordId = 1;
}

message NewRecord {
	string performer = 1;
	string title = 2;
	double price = 3;
	optional int32 stockCount = 4;
	string adminName = 5;
	string adminPass = 6;
}

message UpdateRecordModel {
	int32 updateRecordId = 1;
	optional string performer = 2;
	optional string title = 3;
	optional double price = 4;
	optional int32 stockCount = 5;
	string adminName = 6;
	string adminPass = 7;
}

message DeleteRecordModel {
	int32 deleteRecordId = 1;
	string adminName = 2;
	string adminPass = 3;
}